[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Sprites/Structures/turret.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Structures/gunTurret.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/HealthBar.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 200.0

[node name="gunTurret" type="StaticBody2D"]
collision_layer = 2
script = ExtResource( 2 )
maxHP = 500
fireRates = 0.2
turretTurn = 2.0
wait = 1.0
damage = 10
bulletSpeed = 180
detectRadius = 200

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="WaitTime" type="Timer" parent="."]
one_shot = true

[node name="FireRate" type="Timer" parent="."]
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Turret" type="Sprite" parent="."]
position = Vector2( 0.132433, 0 )
rotation = 1.5708
texture = ExtResource( 1 )
hframes = 2
frame = 1

[node name="bulletpoint1" type="Position2D" parent="Turret"]
position = Vector2( 17.4712, -6.70669 )

[node name="bulletpoint2" type="Position2D" parent="Turret"]
position = Vector2( 17.4718, 6.41932 )

[node name="DetectPlayer" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
shape = SubResource( 2 )

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
margin_left = -14.7473
margin_top = -19.9346
margin_right = -14.7473
margin_bottom = -19.9346
rect_scale = Vector2( 0.25, 0.1 )
[connection signal="timeout" from="WaitTime" to="." method="_on_WaitTime_timeout"]
[connection signal="timeout" from="FireRate" to="." method="_on_FireRate_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="DetectPlayer" to="." method="_on_DetectPlayer_body_entered"]
[connection signal="body_exited" from="DetectPlayer" to="." method="_on_DetectPlayer_body_exited"]
